--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Hp\AppData\Local\Temp\testng-eclipse--1868754394\testng-customsuite.xml</span>
+                    <span>C:\Users\Hp\AppData\Local\Temp\testng-eclipse-942226880\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AllTestCases.TC_03_create_compare_ContactTest" class="method navigator-link" hash-for-method="abcd">abcd</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AllTestCases.TC_01_Select_particular_rowTest" class="method navigator-link" hash-for-method="main1">main1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">AllTestCases.TC_03_create_compare_ContactTest</span>
+              <span class="class-name">AllTestCases.TC_01_Select_particular_rowTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="abcd">
-                  </a> <!-- abcd -->
-                  <span class="method-name">abcd</span>
+                  <a name="main1">
+                  </a> <!-- main1 -->
+                  <span class="method-name">main1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Hp\AppData\Local\Temp\testng-eclipse--1868754394\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Hp\AppData\Local\Temp\testng-eclipse-942226880\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;AllTestCases.TC_03_create_compare_ContactTest&quot;/&gt;
+      &lt;class name=&quot;AllTestCases.TC_01_Select_particular_rowTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -169,10 +169,10 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">Regression</span>
+              <span class="test-group-name">Smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">abcd</span>
+                <span class="method-in-group-name">main1</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -194,14 +194,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'abcd')
-data.setCell(0, 2, 'AllTestCases.TC_03_create_compare_ContactTest')
-data.setCell(0, 3, 17472);
+data.setCell(0, 1, 'main1')
+data.setCell(0, 2, 'AllTestCases.TC_01_Select_particular_rowTest')
+data.setCell(0, 3, 8022);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -227,34 +227,34 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">AllTestCases.TC_03_create_compare_ContactTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">AllTestCases.TC_01_Select_particular_rowTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">connectToDB</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">launchBrowser</span>
-                <span class="method-start">30 ms</span>
+                <span class="method-start">38 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">logionAppln</span>
-                <span class="method-start">4520 ms</span>
+                <span class="method-start">4389 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">abcd</span>
-                <span class="method-start">6935 ms</span>
+                <span class="method-name">main1</span>
+                <span class="method-start">6680 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">logoutAppln</span>
-                <span class="method-start">24408 ms</span>
+                <span class="method-start">14703 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">25757 ms</span>
+                <span class="method-start">15916 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">closeConnectToDB</span>
-                <span class="method-start">25868 ms</span>
+                <span class="method-start">16129 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
