--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>AllTestCases.TC_03_create_compare_ContactTest</td>
+<td>AllTestCases.TC_01_Select_particular_rowTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>abcd</td>
-<td>Regression </td>
+<td>main1</td>
+<td>Smoke </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
