--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8766a7">  <td>22/07/29 18:13:31</td>   <td>0</td> <td title="&gt;&gt;BaseClass.connectToDB()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&gt;&gt;connectToDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
-<tr bgcolor="8766a7">  <td>22/07/29 18:13:31</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
-<tr bgcolor="8766a7">  <td>22/07/29 18:13:35</td>   <td>4513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.logionAppln()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&gt;&gt;logionAppln</td> 
-<td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
-<tr bgcolor="dec760">  <td>22/07/29 18:13:38</td>   <td>6927</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_create_compare_ContactTest.abcd()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">abcd</td> 
-  <td>main@711112124</td>   <td></td> </tr>
-<tr bgcolor="8766a7">  <td>22/07/29 18:13:55</td>   <td>24401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutAppln()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&lt;&lt;logoutAppln</td> 
-<td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
-<tr bgcolor="8766a7">  <td>22/07/29 18:13:57</td>   <td>25749</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
-<tr bgcolor="8766a7">  <td>22/07/29 18:13:57</td>   <td>25860</td> <td title="&lt;&lt;BaseClass.closeConnectToDB()[pri:0, instance:AllTestCases.TC_03_create_compare_ContactTest@6bffbc6d]">&lt;&lt;closeConnectToDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@711112124</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/08/02 15:47:20</td>   <td>0</td> <td title="&gt;&gt;BaseClass.connectToDB()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@7749bf93]">&gt;&gt;connectToDB</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/08/02 15:47:20</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@7749bf93]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/08/02 15:47:25</td>   <td>4376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.logionAppln()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@7749bf93]">&gt;&gt;logionAppln</td> 
+<td>&nbsp;</td>  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="dec760">  <td>22/08/02 15:47:27</td>   <td>6666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_Select_particular_rowTest.main1()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@7749bf93]">main1</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/08/02 15:47:35</td>   <td>14690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutAppln()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@7749bf93]">&lt;&lt;logoutAppln</td> 
+<td>&nbsp;</td>  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/08/02 15:47:36</td>   <td>15903</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@7749bf93]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>22/08/02 15:47:36</td>   <td>16115</td> <td title="&lt;&lt;BaseClass.closeConnectToDB()[pri:0, instance:AllTestCases.TC_01_Select_particular_rowTest@7749bf93]">&lt;&lt;closeConnectToDB</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1398241764</td>   <td></td> </tr>
 </table>
