--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -12,73 +12,40 @@
 <tr>
 <td>&nbsp;</td>
 <td>exampl</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>launchBrowser</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logionAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logoutAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>closeBrowser</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>AllTestCases.TC_03_create_Compare_org_Test</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
+<td>Regression Smoke </td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>abcd</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>launchBrowser</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>logionAppln</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>logoutAppln</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>closeBrowser</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>AllTestCases.TC_01_Select_particular_rowTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -88,35 +55,40 @@
 <tr>
 <td>&nbsp;</td>
 <td>main1</td>
-<td>&nbsp;</td></tr>
+<td>Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>launchBrowser</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logionAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logoutAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>closeBrowser</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td>AllTestCases.TC_04_create_org_delete_Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -126,35 +98,40 @@
 <tr>
 <td>&nbsp;</td>
 <td>run</td>
-<td>&nbsp;</td></tr>
+<td>Regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>launchBrowser</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logionAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logoutAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>closeBrowser</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td>AllTestCases.TC_05_create_camp_deleteCamp_Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -164,35 +141,83 @@
 <tr>
 <td>&nbsp;</td>
 <td>example</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>launchBrowser</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logionAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logoutAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>closeBrowser</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
+<tr>
+<td>AllTestCases.TC_03_create_compare_ContactTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>abcd</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>launchBrowser</td>
+<td>Regression Smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>logionAppln</td>
+<td>Regression Smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>logoutAppln</td>
+<td>Regression Smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>closeBrowser</td>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td>AllTestCases.TC_02_createOrganization_Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -202,33 +227,38 @@
 <tr>
 <td>&nbsp;</td>
 <td>createOrg</td>
-<td>&nbsp;</td></tr>
+<td>Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>launchBrowser</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logionAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>logoutAppln</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>closeBrowser</td>
-<td>&nbsp;</td></tr>
+<td>Regression Smoke </td>
+</tr>
 </table>
